--- a/app/src/main/res/layout/activity_assessment_sheet.xml
+++ b/app/src/main/res/layout/activity_assessment_sheet.xml
@@ -360,6 +360,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/go_profile"
                 android:orientation="vertical">
                 <TextView
                     android:layout_width="wrap_content"
@@ -489,14 +490,14 @@
         </LinearLayout>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="15dp"
             android:text="@string/next"
             android:background="#f1f1f1"
             android:textColor="#f28b74"
-            android:gravity="center"
+            android:gravity="right"
             android:textSize="20dp"
             android:layout_gravity="right"
             android:id="@+id/next"
